# Trac-scam-adress-detection

./: .gitignore  README.md  SKILL.md  app.py  index.HTML  index.js  package-lock.json  package.json
contract/: contract.js  protocol.js
dev/ln-regtest/: docker-compose.yml
features/price/: index.js
features/sc-bridge/: index.js
features/sidechannel/: index.js
scripts/: _env.sh  bootstrap.sh  otc-maker-peer.ps1  otc-maker-peer.sh  otc-maker.mjs  otc-taker-peer.ps1  otc-taker-peer.sh  otc-taker.mjs  promptd.mjs  rfq-maker.mjs  rfq-taker.mjs  swaprecover.mjs  swaprecover.ps1  swaprecover.sh
solana/ln_usdt_escrow/: Cargo.toml
solana/ln_usdt_escrow/src/: lib.rs
src/ln/: client.js
src/price/: consensus.js  oracle.js  providers.js  request.js
src/prompt/: autopost.js  config.js  executor.js  openaiClient.js  repair.js  router.js  system.js  tools.js  toolsCompact.js  tradeAuto.js
src/protocol/: signedMessage.js
src/receipts/: store.js
src/sc-bridge/: client.js
src/solana/: lnUsdtEscrowClient.js
src/swap/: constants.js  hash.js  listings.js  schema.js  stateMachine.js  verify.js
src/util/: stableStringify.js
test/: autopostManager.test.js  executorAutopostStart.test.js  listings.test.js  openaiClient.test.js  priceConsensus.test.js  priceOracle.test.js  promptRouter.test.js  repairToolArguments.test.js  signedMessage.test.js  stableStringify.test.js  swapSchema.test.js  swapStateMachine.test.js  toolsCompact.test.js
test-e2e/: intercom_sidechannel_swap.test.js  ln_solana_swap.test.js  otc_bots.test.js
ui/collin/: eslint.config.js
(+2 files in other folders)
